# ml_supervisado_avanzado

./: Makefile  README.md  pyproject.toml
feature_repo/feature_repo/: bookings.py
feature_repo/feature_repo/data/: online_store.db  registry.db
ml2_mlsupervisadoavanzado/: __init__.py  dataset.py  features.py  plots.py
ml2_mlsupervisadoavanzado/eee/: feature_enginering.py
ml2_mlsupervisadoavanzado/modeling/: predict.py  train.py
notebooks/: Class5-Clustering&ReducciónDimensiones.ipynb  Clustering&ReducciónDimensiones.ipynb  FeatureEngineering.ipynb  MLNoSupervisadoAvanzado.ipynb  ModelosAvanzados+Feast+MLFlow.ipynb  advanced_supervised_models.ipynb  feature_engineering.ipynb  feature_store.ipynb  feature_store_withFeast.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/2b0fc2492c2a4dff835b04637dab0939/: meta.yaml
notebooks/mlruns/0/2b0fc2492c2a4dff835b04637dab0939/tags/: mlflow.runName  mlflow.source.name
notebooks/mlruns/0/ff12a990e9ff461ba86c9c559b0f5fcc/: meta.yaml
notebooks/mlruns/0/ff12a990e9ff461ba86c9c559b0f5fcc/metrics/: accuracy  f1
