[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml2_mlsupervisadoavanzado"
version = "0.0.1"
description = "Practical from Class 4 Machine Learning Supervisado Avanzado"
authors = [
  { name = "EdynsonCoronadoIcochea" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "catboost>=1.2.8",
    "dagshub>=0.6.2",
    "feast>=0.50.0",
    "jupyterlab>=4.4.4",
    "lightgbm>=4.6.0",
    "loguru",
    "mlflow<3.0.0",
    "nltk>=3.9.1",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.1",
    "tqdm",
    "typer",
    "xgboost>=3.0.2",
]
requires-python = "==3.12.1"


[tool.ruff]
line-length = 99
src = ["ml2_mlsupervisadoavanzado"]
include = ["pyproject.toml", "ml2_mlsupervisadoavanzado/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ml2_mlsupervisadoavanzado"]
force-sort-within-sections = true

